SONAR-17287 Scanner supports flow types and description